--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.2.1"
+    "@astrojs/preact": "^2.1.0",
+    "astro": "^2.2.1",
+    "preact": "^10.13.2"
   }
 }
